Makes editor borders black/white for universal visibility and eliminates background color on inline editor to ensure legibility of stylized text within.

--- a/script/ckeditor/contents.css
+++ b/script/ckeditor/contents.css
@@ -97,3 +97,10 @@ pre
 	white-space: pre-wrap; /* CSS 2.1 */
 	word-wrap: break-word; /* IE7 */
 }
+
+/* SMK added 2012-12-14 so that we can see the boundaries of editable content blocks */
+div.editableBlock {
+	border: 1px dashed #000000;
+	box-shadow: 0px 0px 1px #FFFFFF;
+}
+
